[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "rstypes"
version = "0.1.0"
description = "Thread-safe async-aware types for Python written in Rust"
authors = [{ name = "Brian Goo" }]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
# dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
